--- a/sample.config.json
+++ b/sample.config.json
@@ -1,1 +1,19 @@
-
+{
+  "platform" : "Camera-ffmpeg",
+  "cameras" : [
+    {
+      "name" : "Camera",
+      "motion" : true,
+      "videoConfig" : {
+        "vcodec" : "h264_omx",
+        "source" : "-f v4l2 -r 30 -s 1280x720 -i /dev/video0",
+        "maxFPS" : 15,
+        "maxHeight" : 720,
+        "maxStreams" : 6,
+        "maxWidth" : 1280,
+        "stillImageSource" : "-re -f video4linux2 -ss 0.9 -i /dev/video0 -vframes 1"
+      }
+    }
+  ]
+  "name" : "Camera Plugin"
+}
