--- a/sample.config.json
+++ b/sample.config.json
@@ -1,19 +1,46 @@
 {
-  "platform" : "Camera-ffmpeg",
-  "cameras" : [
+  "bridge": {
+    "name": "Homebridge",
+    "username": "CC:22:3D:E3:CE:30",
+    "port": 51826,
+    "pin": "031-45-154"
+  },
+  
+  "description": "This is an example configuration file with one fake accessory and one fake platform. You can use this as a template for creating your own configuration file containing devices you actually own.",
+  "ports": {
+    "start": 52100,
+    "end": 52150,
+    "comment": "This section is used to control the range of ports that separate accessory (like camera or television) should be bind to."
+  },
+  "accessories": [
     {
-      "name" : "Camera",
-      "motion" : true,
-      "videoConfig" : {
-        "vcodec" : "h264_omx",
-        "source" : "-f v4l2 -r 30 -s 1280x720 -i /dev/video0",
-        "maxFPS" : 15,
-        "maxHeight" : 720,
-        "maxStreams" : 6,
-        "maxWidth" : 1280,
-        "stillImageSource" : "-re -f video4linux2 -ss 0.9 -i /dev/video0 -vframes 1"
-      }
+      "accessory": "WeMo",
+      "name": "Coffee Maker"
     }
+  ],
+
+  "platforms": [
+    {
+      "platform" : "Camera-ffmpeg",
+      "cameras" : [
+        {
+          "name" : "Camera",
+          "motion" : true,
+          "videoConfig" : {
+            "vcodec" : "h264_omx",
+            "source" : "-f v4l2 -r 30 -s 1280x720 -i /dev/video0",
+            "maxFPS" : 15,
+            "maxHeight" : 720,
+            "maxStreams" : 6,
+            "maxWidth" : 1280,
+            "stillImageSource" : "-re -f video4linux2 -ss 0.9 -i /dev/video0 -vframes 1"
+          }
+        }
+      ]
+    },
+    {
+      "platform" : "PhilipsHue",
+      "name" : "Hue"
+    },
   ]
-  "name" : "Camera Plugin"
 }
